--- a/bio/index.html
+++ b/bio/index.html
@@ -61,37 +61,92 @@
             <div id="section-bg"></div>
             <div class="section-title">bio</div>
         </div>
-        <div id="bio_container">
+        <div id="section_container">
             <div id="bio_bg"></div>
             <div id="bio_content">
-                <p id="bio_header">Hi, I'm Caleb McTwigan</p>
+                <p id="page_header">Hi, I'm Caleb McTwigan</p>
                 <table>
                     <tr>
                         <td valign="top">
                             <img src="../images/bio-pic.png" />
                         </td>
-                        <td id="bio_blurb" style="max-width:300px;">
-                            <p id="bio_height" style="margin: 0;">I am a motion designer, artist, and multi-lingual coder.
+                        <td id="bio_blurb">
+                            <p id="bio_intro">I am a motion designer, artist, and multi-lingual coder.
                                 I like seeking out opportunities to gain more experience, and am forever educating myself to expand my skill set.<br/><br/>
                                 I have spent most of my career working in art, or in conjunction with artists.
                                 This includes:
-                            <ul>
-                                <li>Motion Design</li>
-                                <li>Illustration</li>
-                                <li>Web Design</li>
-                                <li>Scripting & Coding</li>
-                                <li>Video Production</li>
-                                <li>Developing & Optimizing Artist's Processes</li>
-                            </ul>
-                            Outside of my creative endeavors, you may find me in the backyard with my partner watching a movie, reading a
-                            good children's book... to my sons, attempting to cling on to my dominance over the boys in
-                            video games, or narrowly avoiding electrocuting, maiming, or injuring myself while doing some
-                            DIY projects at home!
+                                <ul>
+                                    <li>Motion Design</li>
+                                    <li>Illustration</li>
+                                    <li>Web Design</li>
+                                    <li>Scripting & Coding</li>
+                                    <li>Video Production</li>
+                                    <li>Developing & Optimizing Artist's Processes</li>
+                                </ul>
+                                Outside of my creative endeavors, you may find me in the backyard with my partner watching a movie, reading a
+                                good children's book... to my sons, attempting to cling on to my dominance over the boys in
+                                video games, or narrowly avoiding electrocuting, maiming, or injuring myself while doing some
+                                DIY projects at home!
                             </p>
                         </td>
                     </tr>
                 </table>
             </div>
         </div>
+        <div id="resume_section">
+            <div class="section">
+                <div id="section-bg"></div>
+                <div class="section-title">resume</div>
+            </div>
+            <div id="resume_container">
+                <table id="res_table">
+                    <tr>
+                        <td id="left_resume">
+                            <div class="res_header">Work</div>
+                            <div class="res_title">Art & Design Optimization Specialist</div>
+                            <div class="res_body">Custom Ink | Jan 2015 - Current</div>
+                            <div class="res_title">Report Developer (Part-Time)</div>
+                            <div class="res_body">Custom Ink | Jun 2019 - Current</div>
+                            <div class="res_title">Expert Production Artist Lead</div>
+                            <div class="res_body">Custom Ink | Mar 2014 - Jan 2015</div>
+                            <div class="res_title">Freelance</div>
+                            <div class="res_body">Web Design & Development, Graphic Design, Animation, Video Editing</div>
+                            <div id="res_spacer"></div>
+                            <div class="res_title">Experience</div>
+                            <div class="res_body">
+                                Process development for a team of over 150+ artists<br/><br/>
+                                Web design & styling for an internal wiki utilized by 1000+ team members<br/><br/>
+                                Internal promotional animations, graphics, videos, and comms<br/><br/>
+                                Video production: direction, editing, color grading, audio mixing, and animation/graphics within brand guidelines<br/><br/>
+                                Project management from idea to execution<br/><br/>
+                                Coaching and developing peers to establish a pipeline of leaders and build up the skills of others<br/>
+                            </div>
+                        </td>
+                        <td id="right_resume">
+                            <div id="res_tools">
+                                <div class="res_header">Tools & Skills</div>
+                                <div class="res_title">Adobe Suite</div>
+                                <div class="res_body">After Effects, Illustrator, Photoshop, Premiere, Audition</div>
+                                <div class="res_title">Project Management & Helpdesk Tools</div>
+                                <div class="res_body">Github, JIRA, Zendesk, Basecamp</div>
+                                <div class="res_title">Reporting/Data Tools</div>
+                                <div class="res_body">Crystal Reports, Excel, Metabase, DataGrip</div>
+                                <div class="res_title">Google Suite</div>
+                                <div class="res_body">Sheets, Slides, Docs, Forms</div>
+                                <div class="res_title">Languages</div>
+                                <div class="res_body">HTML, CSS, JS/JQuery, SQL, Applescript, Google App Scripts</div>
+                            </div>
+                            <div id="res_edu">
+                                <div class="res_header">Education</div>
+                                <div class="res_title">Bachelor of Fine Arts, Animation</div>
+                                <div class="res_body">Savannah College of Art and Design | 2007 - 2009</div>
+                                <div class="res_title">Fine Arts Studies</div>
+                                <div class="res_body">Flagler College | 2003 - 2005</div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        <div>
     </body>
 </html>
