--- a/bio/index.html
+++ b/bio/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Caleb McTwigan | Portfolio</title>
+        <title>Caleb McTwigan | Bio</title>
         <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
