--- a/bio/index.html
+++ b/bio/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-        <title>Caleb McTwigan | Bio</title>
+        <title>Caleb McTwigan | Portfolio</title>
         <link rel="apple-touch-icon" sizes="57x57" href="../favicon/apple-touch-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="../favicon/apple-touch-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="../favicon/apple-touch-icon-72x72.png">
@@ -27,7 +26,6 @@
         <link rel="stylesheet" href="../main.css" type="text/css">
         <link rel="stylesheet" href="bio.css" type="text/css">
     </head>
-
     <body>
         <div class="header">
             <a href="../index.html" id="logo">
