--- a/bio/index.html
+++ b/bio/index.html
@@ -23,8 +23,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <script type="text/javascript" src="../bio/scripts/bio.js"></script>
-        <link rel="stylesheet" href="../main.css" type="text/css">
-        <link rel="stylesheet" href="bio.css" type="text/css">
+        <link rel="stylesheet" href="../main.css" type="text/css"> <!--I need this line to update-->
+        <link rel="stylesheet" href="bio.css" type="text/css"> <!--I need this line to show up-->
     </head>
     <body>
         <div class="header">
